# face_recognition_test

./: .gitignore
data/: struct.txt
demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo  main.cpp
image_catching/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image_catching  main.cpp
training/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
training/main.dSYM/Contents/Resources/DWARF/: main
